change colors to pastels

--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -11,6 +11,11 @@ $color-black: #000;
 // FONT
 $default-font-size: 1.6rem;
 
+$color-primary-purple: #e5d9ffcc;
+$color-primary-red: #ffd9fdcc;
+$color-primary-blue: #d9f3ffcc;
+$color-primary-yellow: #e3c82763;
+
 // GRID
 
 $grid-width: 114rem;
