--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -1,6 +1,13 @@
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-purple, 0.8),
+      rgba($color-primary-red, 0.8),
+      rgba($color-primary-blue, 0.8),
+      rgba($color-primary-yellow, 0.8)
+    ),
+    url(../img/sunrise.jpg);
   background-size: cover;
   background-position: top;
 
