--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -105,6 +105,9 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
 
+.expedition-main-image {
+  max-width: 85%; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -128,10 +131,10 @@ body {
 
 .btn--white {
   color: #777777;
-  background-color: #fff; }
+  background-color: #d9f3ffcc; }
   .btn--white::after {
     content: '';
-    background-color: #fff; }
+    background-color: #ffd9fdcc; }
 
 .btn::after {
   content: '';
@@ -170,7 +173,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(229, 217, 255, 0.8), rgba(255, 217, 253, 0.8), rgba(217, 243, 255, 0.8), rgba(227, 200, 39, 0.8)), url(../img/sunrise.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
