--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -171,6 +171,33 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
+.composition {
+  position: relative; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+  .composition__photo {
+    width: 55%;
+    border-radius: 2px;
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    transition: all 0.2s;
+    z-index: 10;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      top: -2rem;
+      left: 0; }
+    .composition__photo--p2 {
+      top: 2rem;
+      right: 0; }
+    .composition__photo--p3 {
+      top: 10rem;
+      left: 20%; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 2rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(229, 217, 255, 0.8), rgba(255, 217, 253, 0.8), rgba(217, 243, 255, 0.8), rgba(227, 200, 39, 0.8)), url(../img/sunrise.jpg);
