--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -1,5 +1,18 @@
 .section-about {
   background-color: $color-gray-light-1;
-  padding: 25rem 0;
+  padding: 25rem 5rem;
   margin-top: -20vh;
+}
+
+.section-features {
+  padding: 20rem 5rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-purple, 0.8),
+      rgba($color-primary-red, 0.8),
+      rgba($color-primary-blue, 0.8),
+      rgba($color-primary-yellow, 0.8)
+    ),
+    url(../img/nat-4.jpg);
+  background-size: cover;
 }
