--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -15,4 +15,17 @@
     ),
     url(../img/nat-4.jpg);
   background-size: cover;
+  margin-top: -10rem;
+
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tours {
+  background-color: $color-gray-light-1;
+  padding: 25rem 5rem 50rem 5rem;
+  margin-top: -10rem;
 }
