--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -22,6 +22,10 @@ $color-primary-red: #ffd9fdcc;
 $color-primary-blue: #d9f3ffcc;
 $color-primary-yellow: #e3c82763;
 
+//  BOX SHADOW
+
+$box-shadow-black: rgba($color-black, 0.15);
+
 // GRID
 
 $grid-width: 114rem;
