--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -1,13 +1,14 @@
 .card {
   // the lower the value, the more dramatic the effect is
   // implement perspective on the parent component
+
+  // FUNCTIONALITY
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
   height: 50rem;
 
   &__side {
-    background-color: orangered;
     color: white;
     font-size: 2rem;
 
@@ -19,15 +20,15 @@
     width: 100%;
     backface-visibility: hidden; //it hides the back part of an element
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem $box-shadow-black;
 
     &--front {
       background-color: $color-white;
     }
 
     &--back {
-      background-color: green;
-      transform: rotateY(180deg);
+      transform: rotateY(-180deg);
 
       &-1 {
         background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
@@ -41,5 +42,27 @@
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+  // FRONT SIDE STYLING
+
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &--1 {
+      background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
+    }
+
+    &--2 {
+      background-image: url(../img/nat-5.jpg);
+    }
+
+    &--2 {
+      background-image: url(../img/nat-5.jpg);
+    }
   }
 }
